--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
     padding: 2%;
     height: 100%;
 }
+
 .leftp{
     background-color: black;
     color: white;
@@ -230,4 +231,38 @@ ul li{
 }
 .rightp h4{
     color: white !important;
+}
+.footer{
+    height:130px;
+    width: 100%;
+    margin:0 2% 2% 2%;
+    background-color: black;
+    border-radius: 0 0 15px 15px;
+    padding: 5px 30px 0;
+    
+}
+.footer h6,p{
+    color: #C4DC00;
+}
+.footer .leftp{
+    border-radius: 0 0;
+    border-right: 10px solid #C4DC00;
+    width: 41%;
+}
+.rightp-foot{
+    border-left: 10px solid #C4DC00;
+    border-radius: 0 0;
+    width: 50%;
+    margin-left:15px;
+    padding: 10px 0 0 30px;
+    
+    
+}
+a{
+    text-decoration: none;
+    color:#C4DC00;
+}
+.phone, .foot-icon{
+    font-size:26px;
+    color:red
 }
